--- a/weather-api/package.json
+++ b/weather-api/package.json
@@ -1,7 +1,7 @@
 {
   "name": "weather-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "start": "node -r dotenv/config app.js"
   },
